# bia-study-tracker

./: .env_TEMPLATE  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
bia_study_tracker/: main.py  settings.py  study_tracker.py
bia_study_tracker/utils/: API_client.py  reports.py  slack_bot.py
