[tool.poetry]
name = "bia-study-tracker"
version = "0.1.0"
description = "Tracks the studies that are ingested and converted and are available via the search API"
authors = ["Tushar <tushar@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.17.4"
requests = "^2.32.5"
prettytable = "^3.16.0"
pandas = "^2.3.2"
slack-sdk = "^3.36.0"
xlsxwriter = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
track-ingested-studies = "bia_study_tracker.main:app"