[tool.poetry]
name = "bia-study-tracker"
version = "0.1.0"
description = "Tracks the studies that are ingested and converted and are available via the search API"
authors = ["Tushar <tushar@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.3"
requests = "^2.32.5"
prettytable = "^3.16.0"
pandas = "^2.3.2"
slack-sdk = "^3.36.0"
xlsxwriter = "^3.2.5"
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
ngff-zarr = {extras = ["validate"], version = "^0.16.1"}
aiohttp = "^3.12.15"
bia-ingest = {git = "https://github.com/BioImage-Archive/bia-integrator.git", rev = "main", subdirectory = "bia-ingest"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
track-ingested-studies = "bia_study_tracker.main:app"